[Backend] Add improvements backend